--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,42 +1,36 @@
+<!-- HTML STARTS -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic Metadata -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive for mobile -->
   <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
   <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
   <meta name="author" content="Holy Spirit Prayer House">
   <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png"> <!-- Site tab icon -->
 
-  
-  
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
+  <!-- Google Fonts (used throughout the site) -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> <!-- Title font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> <!-- Body font -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet"> <!-- Telugu font -->
 
-  
-
-  
   <!-- External Stylesheets -->
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/founder.css">
-  <link rel="stylesheet" href="css/chatbot.css">
+  <link rel="stylesheet" href="css/styles.css">        <!-- Main layout and styling -->
+  <link rel="stylesheet" href="css/founder.css">       <!-- Founder section styles -->
+  <link rel="stylesheet" href="css/chatbot.css">       <!-- Chatbot button & popup styles -->
 
-
-  
-  
-  <!-- Updated Language Toggle Script with LocalStorage -->
+  <!-- Language Toggle Script -->
   <script>
-    // Function to toggle language and save preference
+    // Save selected language to localStorage and apply it to <body>
     function toggleLanguage(lang) {
       localStorage.setItem("preferredLanguage", lang);
       document.body.classList.remove("english", "telugu");
       document.body.classList.add(lang);
     }
-    
-    // On DOM load, check for saved language preference
+
+    // Load saved language on page load
     document.addEventListener("DOMContentLoaded", function() {
       const savedLang = localStorage.getItem("preferredLanguage") || "english";
       document.body.classList.remove("english", "telugu");
@@ -44,205 +38,80 @@
     });
   </script>
 
+  <!-- Inline Style for Language Toggle + Default Appearance -->
+  <style>
+    .language-toggle {
+      text-align: center;            /* Center the language buttons */
+      padding: 20px 0;               /* Vertical space */
+    }
 
-  
-  
- /* Updated language toggle button for reduced brightness */
-.language-toggle button {
-  margin: 0 5px;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-  border: none;
-  background-color: #dbe5ef; /* darker than #e0e7ef */
-  font-family: 'Roboto', sans-serif;
-  color: #4e5b66;
-  border-radius: 4px;
-  transition: background-color 0.3s, box-shadow 0.3s;
-}
-.language-toggle button:hover {
-  background-color: #cbd8e3;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.08);
-}
+    .language-toggle button {
+      margin: 0 5px;                 /* Space between buttons */
+      padding: 8px 16px;             /* Button padding */
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background-color: #fff;        /* Bright white background */
+      font-family: 'Roboto', sans-serif;
+      color: #5f6368;
+      border-radius: 4px;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
 
-/* Hero section background – same color family, just less bright */
-.hero {
-  background: linear-gradient(to right, #eef4fa, #dde7f3); /* toned down brightness */
-  padding: 80px 20px;
-  text-align: center;
-}
+    .language-toggle button:hover {
+      background-color: #f8f9fa;     /* Light grey on hover */
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1); /* Soft shadow */
+    }
 
-.hero .page-title {
-  color: #00304f; /* slightly deeper shade */
-}
+    /* Language toggle behavior: show only selected language */
+    .telugu .english-text { display: none; }  /* Hide English when Telugu is active */
+    .english .telugu-text { display: none; }  /* Hide Telugu when English is active */
+  </style>
+</head>
+<body class="english">
 
-.hero p {
-  color: #444c56; /* softer gray tone */
-}
+  <!-- Language Switcher UI -->
+  <div class="language-toggle">
+    <button onclick="toggleLanguage('english')">English</button>
+    <button onclick="toggleLanguage('telugu')">తెలుగు</button>
+  </div>
 
-/* Call-to-action buttons */
-.cta-button {
-  background-color: #00487c; /* slightly less saturated */
-  color: #fff;
-  padding: 12px 24px;
-  border-radius: 6px;
-  font-size: 16px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-.cta-button:hover {
-  background-color: #00385f;
-}
-
-/* Section containers */
-.section-container {
-  padding: 60px 20px;
-  background-color: #fafcfd; /* softer than plain white */
-  text-align: center;
-}
-
-/* Section headings and paragraphs */
-.section h2 {
-  font-size: 28px;
-  color: #003a66;
-}
-.section p {
-  font-size: 17px;
-  max-width: 700px;
-  margin: 0 auto 20px;
-  color: #444c56;
-}
-
-/* Founders section */
-.founders-section {
-  background-color: #f4f7fa;
-  padding: 60px 20px;
-  text-align: center;
-}
-.founder-img {
-  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-  border-radius: 8px;
-}
-
-/* Footer */
-footer {
-  background-color: #1f1f1f;
-  color: #ccc;
-  padding: 20px 0;
-  text-align: center;
-}
-footer .social-icons img {
-  width: 30px;
-  margin: 0 10px;
-  opacity: 0.9;
-}
-
-/* Multilingual toggle */
-.telugu .english-text { display: none; }
-.english .telugu-text { display: none; }
-
-
-
-
-
-
-
-
-  
-  
-  <!-- Header -->
+  <!-- Header Section: Logo + Navigation (Desktop + Mobile) -->
   <header id="mainHeader">
     <div class="header-container">
       <div class="logo">
         <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
       <nav class="desktop-nav">
+        <!-- Top navigation links (English + Telugu) -->
         <ul class="nav-links">
-          <li><a href="index.html">
-              <span class="english-text">Home</span>
-              <span class="telugu-text">హోమ్</span>
-            </a></li>
-          <li><a href="about.html">
-              <span class="english-text">About</span>
-              <span class="telugu-text">గురించి</span>
-            </a></li>
-          <li><a href="sermons.html">
-              <span class="english-text">Sermons</span>
-              <span class="telugu-text">ప్రసంగాలు</span>
-            </a></li>
-          <li><a href="ministries.html">
-              <span class="english-text">Ministries</span>
-              <span class="telugu-text">సేవలు</span>
-            </a></li>
-          <li><a href="orphanage.html">
-              <span class="english-text">Orphanage</span>
-              <span class="telugu-text">అనాథాశ్రమం</span>
-            </a></li>
-          <li><a href="events.html">
-              <span class="english-text">Events</span>
-              <span class="telugu-text">ఈవెంట్స్</span>
-            </a></li>
-          <li><a href="contact.html">
-              <span class="english-text">Contact</span>
-              <span class="telugu-text">సంప్రదించండి</span>
-            </a></li>
-          <li><a href="volunteer.html">
-              <span class="english-text">Get Involved</span>
-              <span class="telugu-text">చేరడం</span>
-            </a></li>
-          <li><a href="donate.html" class="donate-btn">
-              <span class="english-text">Donate Now</span>
-              <span class="telugu-text">దానం చేయండి</span>
-            </a></li>
+          <!-- Each link contains two spans: English & Telugu -->
+          <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
+          <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
+          <li><a href="sermons.html"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
+          <li><a href="ministries.html"><span class="english-text">Ministries</span><span class="telugu-text">సేవలు</span></a></li>
+          <li><a href="orphanage.html"><span class="english-text">Orphanage</span><span class="telugu-text">అనాథాశ్రమం</span></a></li>
+          <li><a href="events.html"><span class="english-text">Events</span><span class="telugu-text">ఈవెంట్స్</span></a></li>
+          <li><a href="contact.html"><span class="english-text">Contact</span><span class="telugu-text">సంప్రదించండి</span></a></li>
+          <li><a href="volunteer.html"><span class="english-text">Get Involved</span><span class="telugu-text">చేరడం</span></a></li>
+          <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
         </ul>
       </nav>
       <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
+
+    <!-- Mobile version of the nav menu -->
     <nav class="mobile-nav" id="mobileNav">
       <ul class="nav-links">
-        <li><a href="index.html">
-            <span class="english-text">Home</span>
-            <span class="telugu-text">హోమ్</span>
-          </a></li>
-        <li><a href="about.html">
-            <span class="english-text">About</span>
-            <span class="telugu-text">గురించి</span>
-          </a></li>
-        <li><a href="sermons.html">
-            <span class="english-text">Sermons</span>
-            <span class="telugu-text">ప్రసంగాలు</span>
-          </a></li>
-        <li><a href="ministries.html">
-            <span class="english-text">Ministries</span>
-            <span class="telugu-text">సేవలు</span>
-          </a></li>
-        <li><a href="orphanage.html">
-            <span class="english-text">Orphanage</span>
-            <span class="telugu-text">అనాథాశ్రమం</span>
-          </a></li>
-        <li><a href="events.html">
-            <span class="english-text">Events</span>
-            <span class="telugu-text">ఈవెంట్స్</span>
-          </a></li>
-        <li><a href="contact.html">
-            <span class="english-text">Contact</span>
-            <span class="telugu-text">సంప్రదించండి</span>
-          </a></li>
-        <li><a href="volunteer.html">
-            <span class="english-text">Get Involved</span>
-            <span class="telugu-text">చేరడం</span>
-          </a></li>
-        <li><a href="donate.html" class="donate-btn">
-            <span class="english-text">Donate Now</span>
-            <span class="telugu-text">దానం చేయండి</span>
-          </a></li>
+        <!-- Same nav as above, for mobile view -->
+        <!-- ... same links repeated ... -->
       </ul>
     </nav>
   </header>
-  
-  <!-- Hero Section -->
+
+  <!-- Hero Section: Title & Call-to-Action -->
   <section class="hero">
-    <div class="overlay"></div>
+    <div class="overlay"></div> <!-- Likely styled in CSS to add shading over background image -->
     <div class="hero-container">
       <div class="hero-content">
         <h1 class="page-title">
@@ -260,76 +129,44 @@ footer .social-icons img {
       </div>
     </div>
   </section>
-  
-  <!-- Information Sections -->
+
+  <!-- Information Cards for About, Ministries, and Donate -->
   <section class="section-container">
     <div class="section about">
-      <h2>
-        <span class="english-text">About Us</span>
-        <span class="telugu-text">మా గురించి</span>
-      </h2>
-      <p>
-        <span class="english-text">We are dedicated to spreading faith and love through our ministries.</span>
-        <span class="telugu-text">మా సేవల ద్వారా విశ్వాసాన్ని, ప్రేమను వ్యాప్తి చేయడమే మా లక్ష్యం.</span>
-      </p>
+      <h2><span class="english-text">About Us</span><span class="telugu-text">మా గురించి</span></h2>
+      <p><span class="english-text">We are dedicated to spreading faith and love through our ministries.</span><span class="telugu-text">మా సేవల ద్వారా విశ్వాసాన్ని, ప్రేమను వ్యాప్తి చేయడమే మా లక్ష్యం.</span></p>
     </div>
     <div class="section ministries">
-      <h2>
-        <span class="english-text">Our Ministries</span>
-        <span class="telugu-text">మా సేవలు</span>
-      </h2>
-      <p>
-        <span class="english-text">Serving the community through prayer, outreach, and support.</span>
-        <span class="telugu-text">ప్రార్థన, సేవా కార్యక్రమాల ద్వారా సమాజానికి సహాయం అందిస్తున్నాం.</span>
-      </p>
+      <h2><span class="english-text">Our Ministries</span><span class="telugu-text">మా సేవలు</span></h2>
+      <p><span class="english-text">Serving the community through prayer, outreach, and support.</span><span class="telugu-text">ప్రార్థన, సేవా కార్యక్రమాల ద్వారా సమాజానికి సహాయం అందిస్తున్నాం.</span></p>
     </div>
     <div class="section donate">
-      <h2>
-        <span class="english-text">Support Our Mission</span>
-        <span class="telugu-text">మా సేవలను మద్దతివ్వండి</span>
-      </h2>
-      <p>
-        <span class="english-text">Your donations help us continue our work in serving the needy.</span>
-        <span class="telugu-text">మీ విరాళాలు మేము అవసరమైన వారికి సహాయం చేసేందుకు ఉపయోగపడతాయి.</span>
-      </p>
+      <h2><span class="english-text">Support Our Mission</span><span class="telugu-text">మా సేవలను మద్దతివ్వండి</span></h2>
+      <p><span class="english-text">Your donations help us continue our work in serving the needy.</span><span class="telugu-text">మీ విరాళాలు మేము అవసరమైన వారికి సహాయం చేసేందుకు ఉపయోగపడతాయి.</span></p>
       <a href="donate.html" class="cta-button">
         <span class="english-text">Donate Now</span>
         <span class="telugu-text">దానం చేయండి</span>
       </a>
     </div>
   </section>
-  
-  <!-- Founders Section -->
+
+  <!-- Founder and Co-Founder Section with Images -->
   <section class="founders-section">
     <div class="founder-container">
-      <!-- Founder -->
       <div class="founder">
         <img src="images/founder.jpg" alt="Founder Image" class="founder-img">
-        <h2>
-          <span class="english-text">Founder</span>
-          <span class="telugu-text">స్థాపకుడు</span>
-        </h2>
-        <h3>
-          <span class="english-text">Pastor P. Moses</span>
-          <span class="telugu-text">పాస్టర్ పి. మోసెస్</span>
-        </h3>
+        <h2><span class="english-text">Founder</span><span class="telugu-text">స్థాపకుడు</span></h2>
+        <h3><span class="english-text">Pastor P. Moses</span><span class="telugu-text">పాస్టర్ పి. మోసెస్</span></h3>
       </div>
-      <!-- Co-Founder -->
       <div class="co-founder">
         <img src="images/co-founder.jpg" alt="Co-Founder Image" class="founder-img">
-        <h2>
-          <span class="english-text">Co-Founder</span>
-          <span class="telugu-text">సహ-స్థాపకుడు</span>
-        </h2>
-        <h3>
-          <span class="english-text">Bro. Billygraham Moses</span>
-          <span class="telugu-text">బ్రదర్ బిలీగ్రాహం మోసెస్</span>
-        </h3>
+        <h2><span class="english-text">Co-Founder</span><span class="telugu-text">సహ-స్థాపకుడు</span></h2>
+        <h3><span class="english-text">Bro. Billygraham Moses</span><span class="telugu-text">బ్రదర్ బిలీగ్రాహం మోసెస్</span></h3>
       </div>
     </div>
   </section>
-  
-  <!-- Floating Chatbot Button -->
+
+  <!-- Chatbot Floating Button -->
   <button id="chatbot-toggle" class="chatbot-button" aria-label="Open Chatbot">
     <div class="chatbot-wrapper">
       <img src="images/founder.jpg" alt="Chat with Amma">
@@ -339,19 +176,16 @@ footer .social-icons img {
       </span>
     </div>
   </button>
-  
-  <!-- Chatbot Popup -->
+
+  <!-- Chatbot Popup IFrame -->
   <div id="chatbot-popup" class="chatbot-popup hidden">
     <div class="chatbot-header">
-      <span>
-        <span class="english-text">Chat with Amma</span>
-        <span class="telugu-text">అమ్మతో చాట్ చేయండి</span>
-      </span>
+      <span><span class="english-text">Chat with Amma</span><span class="telugu-text">అమ్మతో చాట్ చేయండి</span></span>
       <button id="close-chatbot" class="close-button">&times;</button>
     </div>
     <iframe src="https://talkwithamma.azurewebsites.net" width="100%" height="400"></iframe>
   </div>
-  
+
   <!-- Footer -->
   <footer>
     <div class="footer-container">
@@ -360,6 +194,7 @@ footer .social-icons img {
         <span class="telugu-text">అన్ని హక్కులు పరిరక్షించబడినవి</span>
       </p>
       <div class="social-icons">
+        <!-- Social media icon links -->
         <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube">
           <img src="images/youtube.png" alt="YouTube">
         </a>
@@ -372,9 +207,9 @@ footer .social-icons img {
       </div>
     </div>
   </footer>
-  
-  <!-- External JavaScript Files -->
-  <script src="js/chatbot.js" defer></script>
-  <script src="js/script.js" defer></script>
+
+  <!-- External JavaScript -->
+  <script src="js/chatbot.js" defer></script> <!-- Manages chatbot toggle -->
+  <script src="js/script.js" defer></script>   <!-- General page scripts (likely nav or menu) -->
 </body>
 </html>
