--- a/frontend/header.html
+++ b/frontend/header.html
@@ -1,58 +1,100 @@
-<!-- This file would contain the common header code -->
-<header id="mainHeader">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Events - Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <!-- External Stylesheets -->
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/founder.css">
+  <link rel="stylesheet" href="css/chatbot.css">
+
+  <!-- Language Toggle Script -->
+  <script>
+    function toggleLanguage(lang) {
+      localStorage.setItem("preferredLanguage", lang);
+      document.body.classList.remove("english", "telugu");
+      document.body.classList.add(lang);
+    }
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const savedLang = localStorage.getItem("preferredLanguage") || "english";
+      document.body.classList.add(savedLang);
+    });
+  </script>
+
+  <!-- Inline Styles for Language Toggle -->
+  <style>
+    .language-toggle {
+      text-align: center;
+      padding: 20px 0;
+    }
+    .language-toggle button {
+      margin: 0 5px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background-color: #fff;
+      font-family: 'Roboto', sans-serif;
+      color: #5f6368;
+      border-radius: 4px;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+    .language-toggle button:hover {
+      background-color: #f8f9fa;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
+  </style>
+</head>
+<body class="english">
+  <!-- Language Toggle Button (Top Center) -->
+  <div class="language-toggle">
+    <button onclick="toggleLanguage('english')">English</button>
+    <button onclick="toggleLanguage('telugu')">తెలుగు</button>
+  </div>
+
+  <!-- Header -->
+  <header id="mainHeader">
     <div class="header-container">
       <div class="logo">
         <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
       <nav class="desktop-nav">
         <ul class="nav-links">
-          <li><a href="home.html">
-              <span class="english-text">Home</span>
-              <span class="telugu-text">హోమ్</span>
-            </a></li>
-          <li><a href="sermons.html">
-              <span class="english-text">Sermons</span>
-              <span class="telugu-text">ప్రసంగాలు</span>
-            </a></li>
-          <li><a href="ministries.html">
-              <span class="english-text">Ministries</span>
-              <span class="telugu-text">సేవలు</span>
-            </a></li>
-          <li><a href="events.html">
-              <span class="english-text">Events</span>
-              <span class="telugu-text">ఈవెంట్స్</span>
-            </a></li>
-          <li><a href="contact.html">
-              <span class="english-text">Contact</span>
-              <span class="telugu-text">సంప్రదించండి</span>
-            </a></li>
+          <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
+          <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
+          <li><a href="sermons.html"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
+          <li><a href="ministries.html"><span class="english-text">Ministries</span><span class="telugu-text">సేవలు</span></a></li>
+          <li><a href="orphanage.html"><span class="english-text">Orphanage</span><span class="telugu-text">అనాథాశ్రమం</span></a></li>
+          <li><a href="events.html"><span class="english-text">Events</span><span class="telugu-text">ఈవెంట్స్</span></a></li>
+          <li><a href="contact.html"><span class="english-text">Contact</span><span class="telugu-text">సంప్రదించండి</span></a></li>
+          <li><a href="volunteer.html"><span class="english-text">Get Involved</span><span class="telugu-text">చేరడం</span></a></li>
+          <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
         </ul>
       </nav>
       <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
     <nav class="mobile-nav" id="mobileNav">
       <ul class="nav-links">
-        <li><a href="home.html">
-            <span class="english-text">Home</span>
-            <span class="telugu-text">హోమ్</span>
-          </a></li>
-        <li><a href="sermons.html">
-            <span class="english-text">Sermons</span>
-            <span class="telugu-text">ప్రసంగాలు</span>
-          </a></li>
-        <li><a href="ministries.html">
-            <span class="english-text">Ministries</span>
-            <span class="telugu-text">సేవలు</span>
-          </a></li>
-        <li><a href="events.html">
-            <span class="english-text">Events</span>
-            <span class="telugu-text">ఈవెంట్స్</span>
-          </a></li>
-        <li><a href="contact.html">
-            <span class="english-text">Contact</span>
-            <span class="telugu-text">సంప్రదించండి</span>
-          </a></li>
+        <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
+        <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
+        <li><a href="sermons.html"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
+        <li><a href="ministries.html"><span class="english-text">Ministries</span><span class="telugu-text">సేవలు</span></a></li>
+        <li><a href="orphanage.html"><span class="english-text">Orphanage</span><span class="telugu-text">అనాథాశ్రమం</span></a></li>
+        <li><a href="events.html"><span class="english-text">Events</span><span class="telugu-text">ఈవెంట్స్</span></a></li>
+        <li><a href="contact.html"><span class="english-text">Contact</span><span class="telugu-text">సంప్రదించండి</span></a></li>
+        <li><a href="volunteer.html"><span class="english-text">Get Involved</span><span class="telugu-text">చేరడం</span></a></li>
+        <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
       </ul>
     </nav>
   </header>
-  
