--- a/frontend/orphanage.html
+++ b/frontend/orphanage.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Orphanage - HOLY SPIRIT PRAYER HOUSE</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
-</head>
-<body>
+ <!-- ✅ Load Header -->
+  <div id="header-container"></div>
 
-    <!-- ✅ Include the header -->
-    <div id="header-container"></div>
+  <!-- ✅ Orphanage Section -->
+  <section class="page-content">
+    <h1>
+      <span class="english-text">Support Our Orphanage</span>
+      <span class="telugu-text">మా అనాథాశ్రమాన్ని మద్దతు ఇవ్వండి</span>
+    </h1>
+    <p>
+      <span class="english-text">We provide shelter, education, and love to orphaned children, giving them hope for a better future.</span>
+      <span class="telugu-text">మేము అనాథ పిల్లలకు ఆశ్రయం, విద్య మరియు ప్రేమను అందిస్తూ మెరుగైన భవిష్యత్తు కోసం ఆశను అందిస్తున్నాము.</span>
+    </p>
+  </section>
 
-    <!-- ✅ Orphanage Section -->
-    <section class="page-content">
-        <h1>Support Our Orphanage</h1>
-        <p>We provide shelter, education, and love to orphaned children, giving them hope for a better future.</p>
-    </section>
-
-    <!-- ✅ Include the footer -->
-    <div id="footer-container"></div>
-
-</body>
-</html>
+  <!-- ✅ Load Footer -->
+  <div id="footer-container"></div>
